--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                 data:JSON.stringify(message),
                 dataType:'json',
                 type:'POST',
-                url:'http://127.0.0.1:5000/upload_image',
+                url:'https://cowvsbuffalo.herokuapp.com/upload_image',
                 contentType:false,
                 processData:false,
                 success:function(data){
