--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 
 
         $('#btn').click(function(){
-
+            alert("btn clicked")
             var message = {
                 'image':base64Image
             }
